2017-11-05  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/show_all_results.html :
	Add some elements related to "frame-id" id.

	* tryXpath/pages/show_all_results.js:
	Define relatedFrameId variable;

	* tryXpath/background/try_xpath_background.js:
	Modify genericListener.listeners.showAllResults function.

	* tryXpath/popup/popup.js:
	Define resultsFrameId variable.
	Modify the handler related to set-style element.
	Define invalidFrameId constants.
	Define relatedFrameId variable.

	* tryXpath/popup/popup.html (Results):
	Add a div element.

	* tryXpath/popup/popup.js:
	Define genericListener.listeners.addFrameId function.
	Modify getSpecifiedFrameId funciton.
	Modify collectPopupState function.
	Modify genericListener.listeners.restorePopupState function.
	Modify sendExecute function.

	* tryXpath/popup/popup.html (Main): 
	Rename id. "frameid-expression" -> "frame-id-expression"

	* tryXpath/popup/popup.js:
	Rename frameidExpression -> frameIdExpression
	Rename id. "frameid-expression" -> "frame-id-expression"

	* tryXpath/popup/popup.html (Main):
	Add a select element.

	* tryXpath/popup/popup.js:
	Define getSpecifiedFrameId function.
	Define invalidTabId, invalidExecutionId constans.
	Define showError function.

2017-11-04  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.html (Main):
	Remove some elements related frame-expression.
	Add some elements related frameid-expression.

	* tryXpath/popup/popup.js:
	Remove execScript function.
	Define execContentScript function.

	* tryXpath/scripts/try_xpath_functions.js:
	Modify codes about namespaces.

	* tryXpath/scripts/try_xpath_check_frame.js:
	Create this file.

	* tryXpath/manifest.json:
	Empty content_scripts.

	* tryXpath/scripts/try_xpath_content.js:
	Prevent multiple execution.

	* tryXpath/scripts/try_xpath_functions.js:
	Prevent multiple execution.

2017-11-03  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define execScript function.