@@ -1,3 +1,9 @@
+2017-11-06  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/popup/popup.js:
+	Modify sendToSpecifiedFrame function.
+	Modify sendExecute function.
+
 2017-11-05  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/pages/show_all_results.html :
